test/invalid/datetime/month-under.cpp
TEST(invalid_datetime_tests, test_month_under)
{
    const string toml("# date-month      = 2DIGIT  ; 01-12\nd = 2007-00-01T00:00:00-00:00\n", 66);

    const vector<Error> expected = {
        { 45, 2, 10, "Month must be between 01 and 12 inclusive." },
    };

    assert_errors(toml, expected);
}
